Rollback to old pom.xml as Cobertura addittions were interfering with Jacoco
Removed Cobertura references from pom.xml until we look into
implementing Cobertura next spring