@@ -80,8 +80,6 @@
             <exclude>**/*TestCase.java</exclude>
           -->
           </excludes>
-          <argLine>-XX:MaxPermSize=512m</argLine>
-          <reuseFork>false</reuseFork>
         </configuration>
       </plugin>
       <!-- exec:java -->
@@ -146,16 +144,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.5.2</version>
-        <configuration>
-          <formats>
-            <format>xml</format>
-          </formats>
-        </configuration>
       </plugin>
     </plugins>
   </build>
